objects/redwing__Material_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Access_Level__c</fullName>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Students</fullName>
                </value>
                <value>
                    <fullName>Instructors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__File_External_Id__c</fullName>
        <label>File External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Library__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Library</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>redwing__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>redwing__Material__c</referenceTo>
        <relationshipLabel>Material Items</relationshipLabel>
        <relationshipName>Material_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Material Item</label>
    <nameField>
        <label>Material Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>